# blog-rust-fullstack

./: .gitignore  Cargo.toml  README.md
client/: .ignore  Cargo.toml  Trunk.toml  app.css  index.html  tailwind.config.js
client/css/: app.css
client/src/: app.rs  fetch.rs  main.rs  route.rs
client/src/component/: article_preview.rs  article_vier.rs  article_viewer.rs  button.rs  card.rs  chat_bubble.rs  container.rs  home.rs  link.rs  loading.rs  mod.rs  nav.rs  not_found.rs
client/src/utils/: mod.rs
common/: Cargo.toml
common/src/: articles.rs
server/: .env  Cargo.toml  admin_github_id.txt  blog.db  blog.db-shm  blog.db-wal  oauth_id.txt  oauth_secret.txt
server/src/: build.rs  error.rs  errors.rs  main.rs  route.rs
server/src/api/: article.rs  comment.rs  mod.rs
server/src/api/user/: login.rs  mod.rs
server/src/db/: init.sql  mod.rs
server/src/model/: article.rs  auth.rs  mod.rs  user.rs
shared/: Cargo.toml
shared/src/: articles.rs  comments.rs  lib.rs  users.rs
