[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
reqwest = { version = "0.11.18", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
wasm-bindgen-futures = "0.4.36"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
gloo = "0.8.0"
