[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
derive_more = "0.99.17"
dotenvy = "0.15.7"
futures = "0.3.28"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
shared = { path = "../shared" }
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "sqlite", "chrono"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }

[build-dependencies]
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "sqlite", "chrono"] }
shared = { path = "../shared" }
